# -liserk-db

./: .dockerignore  .gitignore  .rusty-hook.toml  CHANGELOG.md  Cargo.toml  Dockerfile-client  Dockerfile-server  LICENSE  README.md  docker-compose.yaml  justfile  makefile.toml  todo.md
.github/workflows/: check.yml  linux.yml  test.yml
ci/: build-and-test.sh  build_and_test.sh
client/: Cargo.toml
server/: Cargo.toml  makefile.toml
server/migrations/: 20230425104246_init.down.sql  20230425104246_init.up.sql
server/source/: docker-compose.yml
server/src/: app.rs  database.rs  errors.rs  main.rs  settings.rs
server/src/containers/: mod.rs
server/src/core/: errors.rs  logger.rs  mod.rs
server/src/features/cats/: cat_repo.rs  cat_service.rs  mod.rs
server/src/features/users/: mod.rs  user_repo.rs  user_service.rs
server/src/models/: cat.rs  mod.rs  user.rs
server/src/routes/: cat.rs  database.rs  mod.rs  status.rs  user.rs
server/src/tests/: setup.rs  utils.rs
server/src/tests/routes/: cat.rs  user.rs
server/src/utils/: authenticate_request.rs  date.rs  mod.rs  pagination.rs  sea_orm_model.rs  to_uuid.rs  token.rs
shared/: Cargo.toml
shared/src/: generator.rs  main.rs
shared/src/prelude/: mod.rs
src/: lib.rs  main.rs
src/infra/: generator.rs  mod.rs
src/infra/postgres/: cluster.rs  mod.rs  runtime.rs  task.rs  version.rs
src/usecase/: create_backup.rs  create_cluster.rs  create_database.rs  create_instance.rs  heartbeat.rs  mod.rs  start_server.rs  update_access.rs
tests/: create_database.rs
