[package]
name = "liserk-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.37"
actix-web = "4"

[dev-dependencies]
rusty-hook = "0.11.2"
anyhow="1"
predicate = "0.1.0"
assert_cmd = "2.0.10"
