[package]
name = "server"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "liserk-server"
path = "src/main.rs"
test = false
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
shared = { version = "0.0.0", path = "../shared" }
tera = "1.18.1"
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "time", "postgres", "uuid", "json"] }
time = "0.3.20"
uuid = { version = "1.3.2", features = ["v4"] }
bson = { version = "2.6.1", features = ["serde_with", "chrono-0_4"] }
thiserror = "1.0.40"
lazy_static = "1.4.0"
config = "0.13.3"
