[package]
name = "server"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "liserk-server"
path = "src/main.rs"
test = false
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.3"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
serde_derive = "1.0.152"
futures = "0.3.28"
thiserror = "1.0.40"
axum = { version = "0.6.18", features = ["headers"] }
tokio = { version = "1.28.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tower-http = { version = "0.4.0", features = [
    "trace",
    "compression-br",
    "propagate-header",
    "sensitive-headers",
    "cors",
] }
http = "0.2.9"
async-trait = "0.1.68"
jsonwebtoken = "8.3.0"
once_cell = "1.17.1"
bcrypt = "0.14.0"
validator = { version = "0.16.0", features = ["derive"] }
lazy_static = "1.4.0"
mime = "0.3.17"
bytes = "1.4.0"
async_once = "0.2.6"
uuid = { version = "1.3.2", features = ["v4", "serde"] }
sqlx = { version = "0.6.3", features = ["postgres", "time", "uuid", "runtime-actix-native-tls", "macros"] }
time = { version = "0.3.21", features = ["serde"] }
chrono = { version = "0.4.24", features = ["serde"] }

[dev-dependencies]
assert-json-diff = "2.0.2"
reqwest = { version = "0.11.17", features = ["json"] }
